--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		  <h1>GET YOUR DESIRED CAR IN RESONABLE PRICE</h1>
 		  <h3>Explore our diverse range of quality vehicles and fulfill your automotive dreams with affordable options tailored to suit every budget.
 		  </h3>
-		  <a href="#about" class="btn-get-started">Contact us</a>
+		  <a href="#contact" class="btn-get-started">Contact us</a>
 		</div>
 	</section><!-- End Hero Section -->
 	
@@ -233,9 +233,9 @@
 							</div>
 							
 							<div class="form-group">
-								<textarea class="form-control" name="message" rows="5" placeholder="Your message" id="komentar" maxlength="150"></textarea>
+								<textarea class="form-control" name="message" rows="5" placeholder="Your message" id="komentar" maxlength="200"></textarea>
 								<div class="validation"></div>
-								<div id="brojSlova">0/150</div>
+								<div id="brojSlova">0/200</div>
 							</div>
 							<div class="text-center pb-3"><button type="submit">Send</button></div>
 						</form>
@@ -280,7 +280,7 @@
 						<div class="col-md-5 col-sm-6">
 							<div class="single-footer-widget">
 								<div class="footer-logo">
-									<a href="index.html">carvilla</a>
+									<a href="index.html">DriveMotive</a>
 								</div>
 								<p>
 									DriveMotive is your premier destination for quality cars and exceptional service. With a commitment to excellence, we redefine your driving experience. Explore our inventory today!
